SFDCProject/src/objects/Design_Option__c.object
<CustomObject>
    <fields>
        <fullName>KWH_KWP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>kWh/kWp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KWH__c</fullName>
        <defaultValue>0</defaultValue>
        <label>kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KWP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will be populated from design tool.</description>
        <label>kWp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Design_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>This field will be populated from design tool.</description>
        <label>Module</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Design_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>This fields will be populated from design tools</description>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>costPerYearkWh__c</fullName>
        <label>Cost/Year (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Design Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Design Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>